<resources>
    <string name="app_name">OkazuLogkt</string>
    <string name="service_name">OkazuLog</string>
    <string name="btn_login">ログイン</string>
    <string name="btn_logout">ログアウト</string>
    <string name="item">test</string>
    <string name="id_label">ID</string>
    <string name="gId_label">Group ID</string>
    <string name="profile">プロフィール</string>
    <string name="okazulog">OkazuLog</string>
    <string name="category">カテゴリ</string>
    <string name="tags">タグ</string>
    <string name="lastCookedDay">最後に作った日</string>
    <string name="cookedCount">作った回数</string>
    <string name="recipieDetail">詳細</string>
    <string name="add">追加</string>
    <string name="delete">削除</string>
    <string name="update">更新</string>
    <string name="edit">編集</string>
    <string name="cancel">キャンセル</string>
    <string name="editDate">最後の日付を修正</string>
    <string name="languages">言語</string>
    <string name="japanese">日本語</string>
    <string name="english">英語</string>
    <string name="addRecipie">おかずを追加</string>
    <string name="addCategory">カテゴリを追加</string>
    <string name="dscCategory">和食、イタリアンなど、カテゴリを設定すると便利です。</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
